Don't use deprecated new Long contstructors.
Change-Id: I9c102159239287fa91569080dfbba09db961423b
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>